# bpe-vocabulaire

./: .gitignore  README.md  bpe_list_clean.txt  pyproject.toml
bpe_vocabulaire/: converter.py
tests/: test_converter.py
