[tool.poetry]
name = "bpe-vocabulaire"
version = "0.2.0"
description = ""
authors = ["Thibault Ehrhart <thibault.ehrhart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
rdflib = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
